--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </main>
 
   <footer>
-    <h4>Derechos Reservados 2025</h4>
+    <h4>Derechos Reservados 2025_Clonado Por Maribel Roldan</h4>
   </footer>
 </body>
 
