Agregamos seo al proyecto

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
   <link rel="stylesheet" href="./css/style.css">
 
+  <meta name="description" content="Tecnologia educativa, pagina sobre el uso educativo de las TIC en diferentes formas de presentacion, difusion y acceso al conocimiento y a la cultura ">
+
+  <meta name="keywords" content="Tecnologia, educacion, TIC, mundo digital, robotica">
+  <meta name="author" content="Maribel">
+
+  <title>Index Pagina sobre tecnologia educativa</title>
+
 
 
 
