--- a/robotica.html
+++ b/robotica.html
@@ -11,6 +11,15 @@
 
   <title>Página sobre Tecnología Educativa</title>
 
+    <meta name="description" content="Tecnologia educativa, pagina sobre el uso educativo de las TIC en diferentes formas de presentacion, difusion y acceso al conocimiento y a la cultura ">
+
+  <meta name="keywords" content="Tecnologia, educacion, TIC, mundo digital, robotica">
+  <meta name="author" content="Maribel">
+
+    <title>Robotica Pagina sobre tecnologia educativa</title>
+
+
+
 
 <link rel="stylesheet" href="./css/style.css">
 
