vinculamos una api de netlify

--- a/Contacto.html
+++ b/Contacto.html
@@ -68,7 +68,7 @@
 
   <main>
     <section>
-      <form action="Contactame" method="post">
+      <form action="Contactame" method="post" netlify>
 
       <h2>Formulario de contacto Netlify</h2>
 
