--- a/Gracias.html
+++ b/Gracias.html
@@ -67,37 +67,22 @@
   </section>
 
   <main>
-    <section>
-      <form action="Contactame" method="post" action="/Gracias.html" netlify>
 
-      <h2>Formulario de contacto Netlify</h2>
-
-
+    <section class="seccion_gracias">
       <div>
-        <label for="nombre">Nombre:</label>
-        <input type="text" class="form-control" name="nombre" required>
+        <h2>Mensaje enviado correctamente</h2>
+        <h3>Gracias</h3>
       </div>
 
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" name="email" required>
-      </div>
+     <div>
+      <a class="enviar btn_gracias" href="index.html">Volver al indice</a>
+     </div>
 
-      <div>
-        <label for="mensaje">Mensaje:</label>
-        <textarea name="mensaje" rows="4"></textarea>
-      </div>
-
-      <!-- From Uiverse.io by nikk7007 --> 
-<button class="slice">
-  <span class="text">Enviar</span>
-</button>
+    </section>
 
 
-    </form>
-
-
-
+    <section class="seccion_gracias">
+      <img class="img_gracias" src="/assets/img/hand-226358_1280.jpg" alt="Gracias">
     </section>
 
 
