configuracion de la seccion gracias

--- a/Contacto.html
+++ b/Contacto.html
@@ -68,7 +68,7 @@
 
   <main>
     <section>
-      <form action="Contactame" method="post" action="/Gracias.html" netlify>
+      <form action="Contactame" method="post" action="/gracias.html" netlify>
 
       <h2>Formulario de contacto Netlify</h2>
 
