Animaciones de titulo en el index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
   <title>Index Pagina sobre tecnologia educativa</title>
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 
 
@@ -66,7 +68,7 @@
 
   <main>
     <section>
-      <h2>Tecnología Educativa</h2>
+      <h2 data-aos="flip-up">Tecnología Educativa</h2>
       <p>
         La tecnología educativa es "el espacio intelectual pedagógico cuyo
         objeto de estudio son los medios y las tecnologías de la información
@@ -104,7 +106,7 @@
 
 
     <section>
-      <h2>Mundo Digital</h2>
+      <h2 data-aos="zoom-out-right">Mundo Digital</h2>
 
       <p>
         Como dice Stiegler, estamos ante un cambio de época, la tecnología
@@ -163,6 +165,12 @@
 
     <h4>Derechos Reservados 2025_Clonado Por Maribel Roldan</h4>
   </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+  AOS.init();
+</script>
 
 
 </body>
