Añadimos codigo js

--- a/index.html
+++ b/index.html
@@ -41,28 +41,24 @@
   
     </header>
     <nav>
-      <ul>
-  
-        <li>
-          <a href="#"> <img class="icono" src="./assets/icons/home_pin_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Inicio</a>
+      <div class="menu-toggle" id="menu-toggle">
+        ☰
+      </div>
+      <ul id="nav-menu">
+        <li><a href="#"><img class="icono" src="./assets/icons/home_pin_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Inicio</a>
         </li>
-  
-        <li>
-          <a href="robotica.html"> <img class="icono" src="./assets/icons/robot_2_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Robotica</a>
+        <li><a href="robotica.html"><img class="icono" src="./assets/icons/robot_2_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Robótica</a>
         </li>
-  
-        <li>
-          <a href="impresion.html"> <img class="icono" src="./assets/icons/print_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Impresión 3D</a>
+        <li><a href="impresion.html"><img class="icono" src="./assets/icons/print_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Impresión 3D</a>
         </li>
-
-        <li>
-          <a href="Contacto.html"> <img class="icono" src="./assets/icons/call_log_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Contactame</a>
+        <li><a href="Contacto.html"><img class="icono" src="./assets/icons/call_log_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> Contáctame</a>
         </li>
-
-   
       </ul>
-  
     </nav>
+
+...
+
+<script src="./js/script.js"></script>
 
   </section>
 
@@ -167,6 +163,8 @@
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script src="./assets/js/hamburguesa.js"></script>
 
   <script>
   AOS.init();
