Agregamos etiquetas open graph

--- a/impresion.html
+++ b/impresion.html
@@ -20,6 +20,24 @@
   <meta name="keywords" content="Tecnologia, educacion, TIC, mundo digital, robotica">
   <meta name="author" content="Maribel">
 
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://paginformatica-formulario-ef39bd.netlify.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Página sobre Tecnología Educativa">
+<meta property="og:description" content="Tecnologia educativa, pagina sobre el uso educativo de las TIC en diferentes formas de presentacion, difusion y acceso al conocimiento y a la cultura ">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/bdffb43e-e4d2-4aa4-bf1a-35ed1a34a95c.jpg?token=ecWk0cMDkLle5JvB3SLwq3h4rcPRaO-g_mRiQM9QbvE&height=500&width=600&expires=33296649127">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="paginformatica-formulario-ef39bd.netlify.app">
+<meta property="twitter:url" content="https://paginformatica-formulario-ef39bd.netlify.app/">
+<meta name="twitter:title" content="Página sobre Tecnología Educativa">
+<meta name="twitter:description" content="Tecnologia educativa, pagina sobre el uso educativo de las TIC en diferentes formas de presentacion, difusion y acceso al conocimiento y a la cultura ">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/bdffb43e-e4d2-4aa4-bf1a-35ed1a34a95c.jpg?token=ecWk0cMDkLle5JvB3SLwq3h4rcPRaO-g_mRiQM9QbvE&height=500&width=600&expires=33296649127">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <title>impresion Pagina sobre tecnologia educativa</title>
 
 
