--- a/Contacto.html
+++ b/Contacto.html
@@ -85,7 +85,7 @@
 
   <main>
     <section>
-      <form action="Contactame" method="post" action=https://formsubmit.co/mellisroldan70@gmail.com>
+      <form name="Contactame" method="post" action="https://formsubmit.co/mellisroldan70@gmail.com">
 
       <h2>Formulario de contacto Netlify</h2>
 
