Customizamos el formulario

--- a/Contacto.html
+++ b/Contacto.html
@@ -85,7 +85,7 @@
 
   <main>
     <section>
-      <form name="Contactame" method="post" action="https://formsubmit.co/mellisroldan70@gmail.com">
+      <form name="Contactame" method="post" action="https://formsubmit.co/mellisroldan70@gmail.com/59c3d8140d3057816e23120936f61cc5">
 
       <h2>Formulario de contacto Netlify</h2>
 
@@ -104,6 +104,8 @@
         <label for="mensaje">Mensaje:</label>
         <textarea name="mensaje" rows="4"></textarea>
       </div>
+
+      <input type="hidden" name="_next" value="https://copia-ejercicio-git2-submit.vercel.app/Gracias.html">
 
       <!-- From Uiverse.io by nikk7007 --> 
 <button class="slice">
