--- a/Contacto.html
+++ b/Contacto.html
@@ -85,7 +85,7 @@
 
   <main>
     <section>
-      <form name="Contactame" method="post" action="https://formsubmit.co/mellisroldan70@gmail.com/59c3d8140d3057816e23120936f61cc5">
+      <form name="Contactame" method="post" action="https://formsubmit.co/59c3d8140d3057816e23120936f61cc5">
 
       <h2>Formulario de contacto Netlify</h2>
 
