Archivo oculto y ocultamiento de captcha

--- a/Contacto.html
+++ b/Contacto.html
@@ -107,6 +107,14 @@
 
       <input type="hidden" name="_next" value="https://copia-ejercicio-git2-submit.vercel.app/Gracias.html">
 
+      <input type="hidden" name="_captcha" value="false">
+
+      <div>
+        <label for="mensaje">Archivo adjunto</label>
+        <input type="file" name="attachment" accept="image/png, image/jpeg">
+      </div>
+
+
       <!-- From Uiverse.io by nikk7007 --> 
 <button class="slice">
   <span class="text">Enviar</span>
